kubernetes/apps/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "id.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
